# gravity-usb-gadget-manager

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindLibConnmanQt5.cmake
src/: CMakeLists.txt  com.ispirata.Hemera.USBGadgetManager.conf  com.ispirata.Hemera.USBGadgetManager.service  dbus-com.ispirata.Hemera.USBGadgetManager.service.in  dnsmasq-usb-gadget.service  ethernetgadgetoperations.cpp  ethernetgadgetoperations.h  gadget-mac-address.service  main.cpp  usbgadgetmanagerservice.cpp  usbgadgetmanagerservice.h
